Section II.A et B
+  une ref en plus.

--- a/biblio.bib
+++ b/biblio.bib
@@ -300,5 +300,14 @@
   title={Letter to the editor: The Kullback-Leibler distance},
   author={Kullback, Solomon},
   year={1987},
-  publisher={AMERICAN STATISTICIAN}
+  journal={The American Statistician}
+}
+
+@ARTICLE{Fraley00model-basedclustering,
+    author = {Chris Fraley and Adrian E. Raftery},
+    title = {Model-Based Clustering, Discriminant Analysis, and Density Estimation},
+    journal = {JOURNAL OF THE AMERICAN STATISTICAL ASSOCIATION},
+    year = {2000},
+    volume = {97},
+    pages = {611--631}
 }
